test_scores/negative_dimers/features/P55058.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P55058.pkl.xz